# pavol-brain

./: .gitignore  pyproject.toml
brain/: __init__.py  api.py  artifact_validation.py  artifact_verifier.py  audit.py  config.py  control.py  control_center.py  errors.py  instance_identity.py  mcp_server.py  migrations.py  models.py  policy.py  ranking.py  record_references.py  record_uri.py  repository.py  runtime.py  schemas.py  write_envelope.py  write_policy.py  writer.py
docs/: design-system.md
operations/: com.pavol.brain-control-center.plist.template  com.pavol.brain-projector.plist.template
scripts/: apply_artifact_validation_migration.py  audit_brain_parity.py  audit_record_references.py  audit_write_envelope_secrets.py  backfill_artifact_validation.py  bootstrap_brain_instances.py  build_brain_m1_indexes.sh  build_vector_contract_baseline.py  install_brain_control_center.sh  install_brain_launchagent.sh  install_brain_m1_projectors.sh  install_brain_mcp_client_launcher.sh  migrate_brain_m1.py  run_brain_acceptance.py  run_brain_control_center.py  run_brain_mcp.py  run_brain_mcp_ssh.sh  run_brain_projector.py  run_brain_projector_locked.py  smoke_brain_consumer.py  smoke_brain_m1_write.py  stamp_brain_instance.py  verify_brain_slice1.py
spike/: .env.example  DECISION.md  README.md  docker-compose.yml  repos.yaml  requirements.txt  workspaces.yaml
sqlite-spike/: DECISION.md  README.md  schema.sql
tests/: ACCEPTANCE_MATRIX.md  journal_fixture.py  test_artifact_validation.py  test_artifact_validation_backfill.py  test_audit_record_references.py  (+14 more)
(+136 files in other folders)
